# optimal-crop

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: test_mutual_optimal_crop.py  test_optimal_crop.py
optimal_crop/: __init__.py  optimize_crop.py  utils.py
